Fix the size of the slider on smaller screens

--- a/style.scss
+++ b/style.scss
@@ -3117,6 +3117,7 @@ blockquote p,
 
 .art-content-layout .art-content {
     margin: 0 auto;
+    flex: 1;
 }
 
 .art-content-layout .art-sidebar2 {
